--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
   "dependencies": {
     "@react-three/fiber": "^8.17.6",
     "@types/three": "^0.168.0",
+    "clsx": "^2.1.1",
     "eslint-plugin": "^1.0.1",
+    "framer-motion": "^11.5.4",
+    "gsap": "^3.12.5",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "tailwind-merge": "^2.5.2",
     "three": "^0.168.0"
   },
   "devDependencies": {
