--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
+    "smooth-scrollbar": "^8.8.4",
     "tailwind-merge": "^2.5.2",
     "three": "^0.168.0"
   },
