--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@react-three/fiber": "^8.17.7",
     "@studio-freight/react-lenis": "^0.0.47",
+    "@supabase/supabase-js": "^2.45.3",
+    "@tanstack/react-query": "^5.55.4",
     "@types/three": "^0.168.0",
     "clsx": "^2.1.1",
     "eslint-plugin": "^1.0.1",
@@ -22,6 +24,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
     "smooth-scrollbar": "^8.8.4",
