--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
     "tailwind-merge": "^2.5.2",
-    "three": "^0.168.0"
+    "three": "^0.168.0",
+    "unnati4.0": "file:"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
